Fix heigh of wrapp-login in login component

--- a/cd2024bfs1g1-frontend/src/main/ngx/src/app/login/login.component.scss
+++ b/cd2024bfs1g1-frontend/src/main/ngx/src/app/login/login.component.scss
@@ -73,7 +73,7 @@
 
     .wrapp-login {
       width: 840px;
-      max-height: calc(100% - 150px);
+      max-height: calc(100% - 115px);
 
       .login-inner-container {
         width: 100%;
